--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "clsx": "^1.1.1",
     "mobx": "^6.3.0",
     "mobx-react": "^7.1.0",
     "priorityqueuejs": "^2.0.0",
